
add_executable(compat_fd_move_off_stdio_test "fd_move_off_stdio_test.c")
target_link_libraries(compat_fd_move_off_stdio_test fildesh_compat_lib)
add_test(NAME compat_fd_move_off_stdio_test COMMAND compat_fd_move_off_stdio_test)

add_executable(compat_random_bytes_test "random_bytes_test.c")
target_link_libraries(compat_random_bytes_test fildesh_compat_lib)
add_test(NAME compat_random_bytes_test COMMAND compat_random_bytes_test)

add_executable(compat_sh_escape_argv_test "sh_escape_argv_test.c" "${PROJECT_SOURCE_DIR}/tool/spawn.c")
set_property(TARGET compat_sh_escape_argv_test
  APPEND PROPERTY COMPILE_DEFINITIONS UNIT_TESTING)
target_link_libraries(compat_sh_escape_argv_test fildesh_compat_lib)
add_test(NAME compat_sh_escape_argv_test COMMAND compat_sh_escape_argv_test)

add_executable(compat_sh_setenv_test "sh_setenv_test.c")
target_link_libraries(compat_sh_setenv_test fildesh_compat_lib)
add_test(NAME compat_sh_setenv_test COMMAND compat_sh_setenv_test)

add_executable(compat_string_byte_translate_test "string_byte_translate_test.c")
target_link_libraries(compat_string_byte_translate_test fildesh_compat_lib)
add_test(NAME compat_string_byte_translate_test COMMAND compat_string_byte_translate_test)

add_executable(compat_tmpdir_test "tmpdir_test.c")
target_link_libraries(compat_tmpdir_test fildesh_compat_lib)
add_test(NAME compat_tmpdir_test COMMAND compat_tmpdir_test)
